# wind

./: CONTEXT.md  Cargo.toml  FEATURES.md
.cargo/: config.toml
.github/workflows/: release-macos.yml
assets/mac/: wind.icns
docs/: browser-drafts-opportunity.md  cef.md  video-mini-player.md
scripts/: run-bundled-wind
src/: app.rs  lib.rs  main.rs  native_menu.rs  persistence.rs
src/browser/: mod.rs
src/ds/: icons.rs  mod.rs
src/ds/components/: button.rs  copy_url_button.rs  divider.rs  menu_item.rs  mod.rs  search_field.rs  surface.rs  tab_button.rs  text_field.rs
src/ds/theming/: mod.rs  theme.rs  tokens.rs
src/renderer/: cef.rs  favicon.rs  floating_video.rs  mod.rs  new_tab.rs  placeholder.rs
src/ui/: mod.rs  sidebar.rs  toolbar.rs  webview.rs
