[package]
name = "wind"
version = "0.1.0"
edition = "2024"
default-run = "wind"

[dependencies]
cef = { version = "149.3.0", optional = true, features = ["build-util"] }
eframe = "0.35.0"
egui_extras = { version = "0.35.0", features = ["svg"] }
raw-window-handle = { version = "0.6", optional = true }
semver = "1.0"

[features]
default = ["cef-renderer"]
cef-renderer = ["dep:cef", "dep:raw-window-handle", "dep:windows-sys"]

[target.'cfg(target_os = "windows")'.dependencies]
windows-sys = { version = "0.61", optional = true, features = [
    "Win32_UI_WindowsAndMessaging",
] }

[target.'cfg(target_os = "macos")'.dependencies]
dispatch = "0.2"

[package.metadata.cef.bundle]
helper_name = "wind_helper"
resources_path = "assets"
