[package]
name = "wind"
version = "0.1.0"
edition = "2024"
default-run = "wind"

[dependencies]
cef = { version = "150.0.0", optional = true, features = ["build-util"] }
eframe = "0.35.0"
egui_extras = { version = "0.35.0", features = ["svg"] }
directories = "6.0"
raw-window-handle = { version = "0.6", optional = true }
semver = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
skia-safe = "0.99.0"
tempfile = "3.23"
url = "2.5"
uuid = { version = "1.18", features = ["v4", "serde"] }

[features]
default = ["cef-renderer"]
cef-renderer = ["dep:cef", "dep:raw-window-handle", "dep:windows-sys"]

[target.'cfg(target_os = "windows")'.dependencies]
windows-sys = { version = "0.61", optional = true, features = [
    "Win32_UI_WindowsAndMessaging",
] }

[target.'cfg(target_os = "macos")'.dependencies]
dispatch = "0.2"
objc2 = "0.6.4"
objc2-app-kit = { version = "0.3.2", default-features = false, features = [
    "NSApplication",
    "NSCell",
    "NSMenu",
    "NSMenuItem",
    "NSResponder",
    "NSView",
    "NSWindow",
] }
objc2-foundation = { version = "0.3.2", default-features = false, features = [
    "NSGeometry",
    "NSObject",
    "NSString",
] }

[package.metadata.cef.bundle]
helper_name = "wind_helper"
resources_path = "assets"
